# general-netlink-server

./: CMakeLists.txt  Readme.md
Client/: CMakeLists.txt  Client.cpp  Client.ini  Common.h  Config.h  Controller.cpp  Controller.h  Messages.json  Worker.cpp  Worker.h
Common/: Common.h  StopHandler.h
Common/Actions/: Actions.cpp  Actions.h  CMakeLists.txt
Common/NlWrapper/: CMakeLists.txt  NlWrapper.cpp  NlWrapper.h
Common/SimpleLogger/: CMakeLists.txt  SimpleLogger.h  empty.cpp
Demo/: Client  Client.ini  Readme.md  Server  Server.ini
Server/: Acceptor.cpp  Acceptor.h  BuildAnswer.cpp  BuildAnswer.h  CMakeLists.txt  Common.h  Server.cpp  Server.ini
